# tmux-remote

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  README.md
.github/workflows/: release.yaml
agent/: CMakeLists.txt  Makefile
agent/src/: main.c  nabtoshell.h  nabtoshell_banner.c  nabtoshell_banner.h  nabtoshell_coap_attach.c  nabtoshell_coap_create.c  nabtoshell_coap_handler.c  nabtoshell_coap_handler.h  nabtoshell_coap_resize.c  nabtoshell_coap_sessions.c  nabtoshell_coap_status.c  nabtoshell_control_stream.c  nabtoshell_control_stream.h  nabtoshell_device.c  nabtoshell_iam.c  nabtoshell_iam.h  nabtoshell_init.c  nabtoshell_pattern_cbor.c  nabtoshell_pattern_config.c  nabtoshell_pattern_engine.c  nabtoshell_pattern_matcher.c  nabtoshell_prompt_lifecycle.c  nabtoshell_prompt_rules.c  nabtoshell_rolling_buffer.c  nabtoshell_session.c  nabtoshell_session.h  nabtoshell_stream.c  nabtoshell_stream.h  nabtoshell_terminal_state.c  nabtoshell_tmux.c  tmuxremote.h  tmuxremote_banner.c  tmuxremote_banner.h  tmuxremote_coap_attach.c  tmuxremote_coap_create.c  tmuxremote_coap_handler.c  tmuxremote_coap_handler.h  tmuxremote_coap_resize.c  tmuxremote_coap_sessions.c  tmuxremote_coap_status.c  (+32 more)
agent/tests/: test_pattern_config.c  test_pattern_engine.c  test_pattern_routing.c  test_prompt_config.c  test_prompt_detector_replay.c  test_prompt_lifecycle.c  test_prompt_protocol.c  test_prompt_rules.c  test_pty_replay.c  test_terminal_state.c
agent/tests/fixtures/: pty-log-8.ptyr  pty-log-9.ptyr
clients/android/: settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/nabto/tmuxremote/: MainActivity.kt  TmuxRemoteApp.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/models/: DeviceBookmark.kt  PairingInfo.kt  SessionInfo.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/patterns/: PatternEngine.kt  PatternMatch.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/services/: BookmarkStore.kt  CBORHelpers.kt  ConnectionManager.kt  KeyStoreService.kt  NabtoService.kt  ReconnectLogic.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/terminal/: KeyboardAccessoryBar.kt  NabtoTerminalSession.kt  TerminalViewComposable.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/ui/components/: PatternOverlaySheet.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/ui/navigation/: AppNavigation.kt
clients/android/app/src/main/java/com/nabto/tmuxremote/ui/screens/: DeviceListScreen.kt  PairingScreen.kt  (+3 more)
clients/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
clients/android/app/src/main/res/values/: strings.xml  themes.xml
clients/cli/: CMakeLists.txt  Makefile
clients/cli/src/: main.c  nabtoshell_attach.c  nabtoshell_client_coap.c  nabtoshell_client_config.c  nabtoshell_client_util.c  nabtoshell_pair.c  tmuxremote_attach.c  tmuxremote_attach.h  tmuxremote_client.h  tmuxremote_client_coap.c  tmuxremote_client_coap.h  tmuxremote_client_config.c  tmuxremote_client_config.h  tmuxremote_client_util.c  tmuxremote_client_util.h  tmuxremote_devices.c  tmuxremote_devices.h  tmuxremote_pair.c  tmuxremote_pair.h  tmuxremote_rename.c  tmuxremote_rename.h  tmuxremote_sessions.c  tmuxremote_sessions.h
clients/ios/: Podfile  project.yml
clients/ios/NabtoShell/: Info.plist
clients/ios/NabtoShell/App/: AppState.swift  NabtoShellApp.swift  RootView.swift
clients/ios/NabtoShell/Models/: DeviceBookmark.swift  PairingInfo.swift  SessionInfo.swift
clients/ios/NabtoShell/Patterns/: PatternConfig.swift  PatternEngine.swift
clients/ios/NabtoShell/Services/: BookmarkStore.swift  CBORHelpers.swift  ConnectionManager.swift  KeychainService.swift  NabtoService.swift  ResumeLogic.swift  StubNabtoService.swift  StubScript.swift
clients/ios/NabtoShell/Views/: DeviceListView.swift  KeyboardAccessoryView.swift  PairingView.swift  SessionListView.swift  TerminalScreen.swift  TerminalViewWrapper.swift  WelcomeView.swift
clients/ios/NabtoShellTests/: BookmarkStoreTests.swift  CBORHelpersTests.swift  NabtoServiceDisconnectTests.swift  PairingInfoTests.swift  PatternConfigTests.swift  PatternEngineTests.swift  ReconnectLogicTests.swift  ResumeLogicTests.swift
clients/ios/NabtoShellUITests/: NabtoShellUITests.swift  PatternOverlayUITests.swift
clients/ios/TmuxRemote/: Info.plist
clients/ios/TmuxRemote/App/: Theme.swift  TmuxRemoteApp.swift
clients/ios/TmuxRemote/Models/: DeviceBookmark.swift
clients/ios/TmuxRemote/Patterns/: PatternMatch.swift
clients/ios/TmuxRemote/Services/: BookmarkStore.swift  CBORHelpers.swift  ConnectionManager.swift  KeychainService.swift  ReconnectLogic.swift
clients/ios/TmuxRemote/Views/: DeviceListView.swift  KeyboardAccessoryView.swift  PairingView.swift  PatternOverlayView.swift  SettingsView.swift  TerminalScreen.swift  WelcomeView.swift
clients/ios/TmuxRemoteTests/: BookmarkStoreTests.swift  CBORHelpersTests.swift  NabtoServiceDisconnectTests.swift  PairingInfoTests.swift  PatternConfigTests.swift  PatternEngineTests.swift  ReconnectLogicTests.swift  ResumeLogicTests.swift
clients/ios/TmuxRemoteUITests/: PatternOverlayUITests.swift  TmuxRemoteUITests.swift
docs/plans/: 2026-03-04-homebrew-tap-design.md
pattern-engine/: CMakeLists.txt
pattern-engine/include/: pe_detector.h  pe_pattern_config.h  pe_prompt.h  pe_prompt_lifecycle.h  pe_prompt_rules.h  pe_protocol.h  pe_terminal_state.h
pattern-engine/src/: pe_detector.c  pe_pattern_config.c  pe_prompt.c  pe_prompt_lifecycle.c  pe_prompt_rules.c  pe_protocol.c  pe_terminal_state.c
pattern-engine/tests/: test_detector.c  test_detector_replay.c  test_pattern_config.c  test_prompt_lifecycle.c  test_prompt_rules.c  test_protocol.c  test_terminal_state.c
pattern-engine/tests/fixtures/: pty-log-10.ptyr  pty-log-17.ptyr  pty-log-18.ptyr  pty-log-7.ptyr
tests/: test_config.json.example
tests/online/: conftest.py  test_connect.py  test_devices.py  test_pair.py  test_security.py  test_sessions.py
(+1 files in other folders)
